[package]
name = "djangohashers"
version = "0.3.1"
authors = ["Ronaldo Racum <ronaldo@racum.com>"]
documentation = "https://docs.rs/djangohashers/"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/racum/rust-djangohashers"
repository = "https://github.com/racum/rust-djangohashers"
keywords = ["hash", "password", "python", "django", "crypto"]
categories = ["algorithms", "authentication", "cryptography"]
description = "A Rust port of the password primitives used in Django project."

[badges]
travis-ci = { repository = "Racum/rust-djangohashers" }

[lib]
doc = true
doctest = false
bench = true

[features]
default = ["with_pbkdf2", "with_argon2", "with_bcrypt", "with_legacy"]
with_pbkdf2 = ["base64", "constant_time_eq"]
with_argon2 = ["base64", "cargon", "constant_time_eq"]
with_bcrypt = ["bcrypt"]
with_legacy = ["pwhash", "constant_time_eq"]
fpbkdf2 = ["with_pbkdf2", "fastpbkdf2"]
fuzzy_tests = []

[dependencies]
rust-crypto = "^0.2"
rand = "^0.5"
regex = "^1.0"
lazy_static = "^1.0"
bcrypt = { version = "^0.2", optional = true }
base64 = { version = "^0.9", optional = true }
pwhash = { version = "^0.2", optional = true }
fastpbkdf2 = { version = "0.1.0", optional = true }
cargon = { version = "0.0.1", optional = true }
constant_time_eq = { version = "0.1.3", optional = true }

[dev-dependencies]
quickcheck = "^0.6"
