[package]
name = "djangohashers"
version = "1.0.1"
authors = ["Ronaldo Racum <ronaldo@racum.com>"]
documentation = "https://docs.rs/djangohashers/"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/racum/rust-djangohashers"
repository = "https://github.com/racum/rust-djangohashers"
keywords = ["hash", "password", "python", "django", "crypto"]
categories = ["algorithms", "authentication", "cryptography"]
description = "A Rust port of the password primitives used in Django project."
edition = "2018"

[badges]
travis-ci = { repository = "Racum/rust-djangohashers" }

[lib]
doc = true
doctest = false
bench = true

[features]
default = ["with_pbkdf2", "with_argon2", "with_bcrypt", "with_legacy"]
with_pbkdf2 = ["base64", "constant_time_eq", "pbkdf2", "sha-1", "sha2", "hmac"]
with_argon2 = ["base64", "cargon", "constant_time_eq"]
with_bcrypt = ["bcrypt", "sha2"]
with_legacy = ["pwhash", "constant_time_eq", "md-5", "sha-1"]
fpbkdf2 = ["base64", "constant_time_eq", "fastpbkdf2"]
fuzzy_tests = []

[dependencies]
rand = "^0.6"
regex = "^1.0"
lazy_static = "^1.0"
md-5 = { version = "0.8.0", optional = true }
sha-1 = { version = "0.8.1", optional = true }
sha2 = { version = "0.8.0", optional = true }
pbkdf2 = { version = "0.3.0", default-features = false, optional = true }
hmac = { version = "0.7.0", optional = true }
bcrypt = { version = "^0.3", optional = true }
base64 = { version = "^0.10", optional = true }
pwhash = { version = "^0.3", optional = true }
fastpbkdf2 = { version = "0.1.0", optional = true }
cargon = { version = "0.0.1", optional = true }
constant_time_eq = { version = "0.1.3", optional = true }

[dev-dependencies]
quickcheck = "^0.8"
