[package]
name = "djangohashers"
version = "1.5.6"
authors = ["Ronaldo Racum <ronaldo@racum.com>"]
documentation = "https://docs.rs/djangohashers/"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/racum/rust-djangohashers"
repository = "https://github.com/racum/rust-djangohashers"
keywords = ["hash", "password", "python", "django", "crypto"]
categories = ["algorithms", "authentication", "cryptography"]
description = "A Rust port of the password primitives used in Django project."
edition = "2018"

[lib]
doc = true
doctest = false
bench = true

[features]
default = ["with_pbkdf2", "with_argon2", "with_scrypt", "with_bcrypt", "with_legacy"]
with_pbkdf2 = ["base64", "constant_time_eq", "ring"]
with_argon2 = ["base64", "constant_time_eq", "rust-argon2"]
with_scrypt = ["base64", "constant_time_eq", "scrypt"]
with_bcrypt = ["bcrypt", "sha2"]
with_legacy = ["pwhash", "constant_time_eq", "md-5", "sha-1", "hex_fmt"]
fpbkdf2 = ["base64", "constant_time_eq", "fastpbkdf2"]
fuzzy_tests = []

[dependencies]
rand = "^0.8"
regex = "^1.0"
lazy_static = "^1.0"
md-5 = { version = "^0.10", optional = true }
sha-1 = { version = "^0.10", optional = true }
sha2 = { version = "^0.10", optional = true }
ring = { version = "^0.16", default-features = false, optional = true }
bcrypt = { version = "^0.12", optional = true }
base64 = { version = "^0.13", optional = true }
pwhash = { version = "^1.0", default-features = false, optional = true }
fastpbkdf2 = { version = "^0.1", optional = true }
rust-argon2 = { version = "^1.0", optional = true }
scrypt = { version = "^0.9", optional = true }
constant_time_eq = { version = "^0.1", optional = true }
hex_fmt = { version = "^0.3", optional = true }

[dev-dependencies]
quickcheck = "^1.0"
